# StarlightEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Engine.cfg  PrepareMedia.py  README.md
media/models/: vertShader.vert
media/models/cube/: cube.mtl
media/models/icoSphere/: icoSphere.frag  icoSphere.vert
media/models/lion-statue/: fragShader.frag
media/models/lion-statue/source/: rapid.mtl
media/models/table/: Desk_OBJ.mtl
media/models/teapot/teapot-flat/: teapot-flat.mtl
media/shaders/: defaultFrag.frag  defaultVert.vert  fragShader.frag  shadowRender.vert  surfaceColor.frag  surfaceColor.vert  vertShader.vert
media/shaders/pointlight/: pointLight.frag  pointLight.vert
src/: CMakeLists.txt  Callback.h  CameraController.cpp  CameraController.h  Constants.h  Controller.cpp  Controller.h  Enums.h  GLSLShader.cpp  GLSLShader.h  GLSlangHelper.h  HelloSquare.cpp  HelloSquare.h  HelloSquareApplication.cpp  HelloSquareApplication.h  InteractionSystem.cpp  InteractionSystem.h  ObjectApp.cpp  ObjectApp.h  OptionsController.cpp  OptionsController.h  SceneBuilder.cpp  SceneBuilder.hpp  Shader.h  ShadercHelper.h  StarlightEngine.cpp  Vertex.h  VertexColor.cpp  VertexColor.h  VulkanObject.cpp  VulkanObject.h  oShader.cpp
src/Applications/: BumpApp.cpp  BumpApp.h  LightApp.cpp  LightApp.h  LightTypeApp.cpp  LightTypeApp.h  MultipleObjectApp.cpp  MultipleObjectApp.h  ObjectApp.cpp  ObjectApp.h  TextureApp.cpp  TextureApp.h
